# veil

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: packcode.vdf
src-tauri/sidecar/dumper/: index.js  package-lock.json  package.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: catalog.rs  config.rs  dumper.rs  manifest_fix.rs  mod.rs  patcher.rs  steam.rs  updater.rs  veil.rs
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/hooks/: useAppInit.ts  useUpdate.tsx
src/pages/: CatalogPage.tsx  DumperPage.tsx  InstallPage.tsx  LibraryPage.tsx  PatcherPage.tsx  SettingsPage.tsx
