[package]
name = "veil"
version = "1.0.2"
description = "The Next Generation Steam Manifest Installer"
authors = ["Zyhloh"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "veil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
zip = "2"
reqwest = { version = "0.12", features = ["json"] }
winreg = "0.55"
dirs = "6"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.35"
png = "0.17"
sha2 = "0.10"
regex = "1"
